set 2 values for grid gap, fix mobile bug?

--- a/src/App.css
+++ b/src/App.css
@@ -35,13 +35,3 @@
     transform: rotate(360deg);
   }
 }
-
-/* 
-
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-*/
